@startuml

title __REFACTOR's Class Diagram__\n

    class drive {
    }

    namespace events {
      class events.ControlDeskEvent {
      }
    }


    namespace events {
      class events.LaneEvent {
      }
    }


    namespace events {
      class events.PinsetterEvent {
      }
    }


    namespace managers {
      class managers.ControlDeskManager {
      }
    }

    namespace managers {
      class managers.LaneManager {
      }
    }


    namespace managers {
      class managers.PinsetterManager {
      }
    }

  

    namespace models {
      class models.Bowler {
      }
    }

  

    namespace models {
      class models.ControlDesk {
      }
    }

    namespace models {
      class models.Lane {
      }
    }


    namespace models {
      class models.Party {
      }
    }

  

    namespace models {
      class models.Pinsetter {
      }
    }

  

    namespace models {
      class models.Score {
      }
    }

    namespace models {
      class models.ScoreBoard {
      }
    }

    namespace models {
      class models.ScoreReport {
      }
    }

  

    namespace observers {
      interface observers.ControlDeskObserver {
      }
    }


    namespace observers {
      interface observers.LaneObserver {
      }
    }

  

    namespace observers {
      interface observers.PinsetterObserver {
      }
    }

  

    namespace utils {
      class utils.BowlerFile {
      }
    }


    namespace utils {
      class utils.PrintableText {
      }
    }


    namespace utils {
      class utils.Queue {
      }
    }


    namespace utils {
      class utils.ScoreHistoryFile {
      }
    }


    namespace utils {
      class utils.UiComponents {
      }
    }

  

    namespace views {
      class views.AddPartyView {
      }
    }

    namespace views {
      class views.ControlDeskView {
      }
    }


    namespace views {
      class views.EndGamePromptView {
      }
    }


    namespace views {
      class views.EndGameReportView {
      }
    }


    namespace views {
      class views.LaneStatusView {
      }
    }


    namespace views {
      class views.LaneView {
      }
    }


    namespace views {
      class views.LaneViewHelper {
      }
    }

    namespace views {
      class views.NewPatronView {
      }
    }


    namespace views {
      class views.PinSetterView {
      }
    }


  events.LaneEvent o-- models.Bowler : bowler
  events.LaneEvent o-- models.Party : party
  models.ControlDesk o-- managers.ControlDeskManager : controlDeskManager
  models.ControlDesk o-- utils.Queue : partyQueue
  models.Lane .up.|> observers.PinsetterObserver
  models.Lane o-- models.Bowler : currentThrower
  models.Lane o-- managers.LaneManager : laneManager
  models.Lane o-- models.Party : party
  models.Lane o-- models.ScoreBoard : scoreBoard
  models.Lane o-- models.Pinsetter : setter
  models.Pinsetter o-- managers.PinsetterManager : manager
  utils.PrintableText .up.|> java.awt.print.Printable
  views.AddPartyView .up.|> java.awt.event.ActionListener
  views.AddPartyView .up.|> javax.swing.event.ListSelectionListener
  views.AddPartyView o-- views.ControlDeskView : controlDesk
  views.ControlDeskView .up.|> java.awt.event.ActionListener
  views.ControlDeskView .up.|> observers.ControlDeskObserver
  views.ControlDeskView o-- models.ControlDesk : controlDesk
  views.EndGamePromptView .up.|> java.awt.event.ActionListener
  views.EndGameReportView .up.|> java.awt.event.ActionListener
  views.EndGameReportView .up.|> javax.swing.event.ListSelectionListener
  views.LaneStatusView .up.|> java.awt.event.ActionListener
  views.LaneStatusView .up.|> observers.LaneObserver
  views.LaneStatusView .up.|> observers.PinsetterObserver
  views.LaneStatusView o-- models.Lane : lane
  views.LaneStatusView o-- views.LaneView : lv
  views.LaneStatusView o-- views.PinSetterView : psv
  views.LaneView .up.|> java.awt.event.ActionListener
  views.LaneView .up.|> observers.LaneObserver
  views.LaneView o-- models.Lane : lane
  views.NewPatronView .up.|> java.awt.event.ActionListener
  views.NewPatronView o-- views.AddPartyView : addParty
  views.PinSetterView .up.|> observers.PinsetterObserver


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
